--- a/6/1.html
+++ b/6/1.html
@@ -2,172 +2,13 @@
 
 <head>
   <title>Arkaoind</title>
-  <script>
+  <link rel="stylesheet" type="text/css" href="main.css">
 
-    var canvas
-    var ctx
-    var tick = 0
-    var img = new Image();
-
-
-        var dot = 
-        {
-            x: 50,
-            y: 50,
-            dx: 10,
-            dy: 4,
-
-
-            move: function() 
-            {
-
-                if (this.x >= canvas.width || this.x <= 0){
-                  this.dx *= -1
-                }
-
-                if (this.y >= canvas.height || this.y <= 0){
-                  this.dy *= -1
-                }
-
- 
-                this.x = this.x + this.dx
-                this.y = this.y + this.dy
-            }
-
-        }
-
-        function drawDot() {
-
-            ctx.fillStyle = "orange"
-            ctx.beginPath()
-            ctx.arc(dot.x, dot.y, 10, 0, Math.PI * 2)
-            ctx.closePath()
-            ctx.fill()
-
-        }
-
-
-        function setText() {
-            text.innerHTML = "Tick: " + tick
-          }
-
-
-      function pozadie() {
-            img.src = "pozadie.jpg";
-            img.onload = function () {
-
-                  ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-              }
-
-      }
-
-
-        function step() {
-              tick++
-              dot.move()
-              drawDot()
-              setText()
-              requestAnimationFrame(step);
-        }
-
-
-        window.onload = function()
-            { 
-              button = document.getElementById("button")
-              text = document.getElementById("text")
-              canvas = document.getElementById("canvas")
-              ctx = canvas.getContext("2d")
-              button.onclick = step
-              pozadie();
-            }
-
-        function stop() {
-              document.querySelector(".autoPolisna").style.animationPlayState = "paused";
-
-              const initialWidth = document.body.clientWidth;
-              pos = document.querySelector(".").offsetLeft;
-              val = Math.round((pos * 100)/initialWidth);
-        }
-
-        function play() {
-          document.querySelector(".autoPolisna").style.animationPlayState = "running";
-        }
-
-  </script>
-    <style>
-
-          #canvas
-          {
-            border-style: solid;
-            border-width: 5px;
-            border-color:gray;
-          }
-
-
-          .block01
-          {
-              width: 64.2px;
-              height: 27.6px;
-              position:absolute;
-              left:30px;
-              top:80px;
-          }
-
-
-          .block02
-          {
-              width: 64.2px;
-              height: 27.6px;
-              position:absolute;
-              left:120px;
-              top:80px;
-          }
-
-
-          .block03
-          {
-              width: 64.2px;
-              height: 27.6px;
-              position:absolute;
-              left:210px;
-              top:80px;
-          }
-
-
-          .autoPolisna{
-            width: 5px;
-            height: 15px;
-            position: relative;
-            width: 20vw;
-            animation-name: move;
-            animation-duration: 1s;
-            animation-delay: 0s;
-            animation-direction: alternate-reverse;
-            animation-timing-function: linear;
-            animation-iteration-count: infinite;
-            position:absolute;
-            left:0x;
-            top:440px;
-            width:auto;
-          }
-
-
-          @keyframes move {
-            from {left: 15px;}
-            to {left: 145px;}
-          }
-
-
-        .allControls{
-          margin: 15px;
-        }
-
-    </style>
 </head>
 
 
 <body >
-
+  <script src="main.js"></script>
   <div class="cela hra">
 
         <div class="nadpis" >
@@ -177,20 +18,18 @@
 
         <div class="game">
             <canvas id="canvas" height="420" width="280"></canvas>
-            <img class="autoPolisna" src="plosina.png" />
+            <img class="plosina" src="plosina.png" />
             <img class="block01" src="blockOranzovy.png" />
             <img class="block02" src="blockOranzovy.png" />
             <img class="block03" src="blockOranzovy.png" />
         </div>
 
+        <img src="lopta.png" id="lopta" width="25" height="25">
+            
 
-        <div class="allControls">
+        <div class="controls">
             <button id="button">Step</button>
 
-            <div class="controls">
-              <button onclick="stop()" />Auto plosina STOP</button>
-              <button onclick="play()" />Auto plosina START</button>
-            </div>
 
         </div>
 
